Fixed the navbar of the Sign Up page by adding background-color black. The Light Mode toggle was overlapping on Sign-In Button, so commented it out, for future un-commenting. Also, added 30px of margin-top and margin-bottom to the Sign In div

--- a/signUp.css
+++ b/signUp.css
@@ -17,6 +17,7 @@ body {
     position: sticky;
     top: 0;
     z-index: 5;
+    background-color: black;
 }
 
 
@@ -38,6 +39,8 @@ body {
     width: 100%; 
     max-width: 400px; /* Slightly larger width */
     transition: transform 0.3s ease-in-out; /* Smooth transition for hover effects */
+    margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 
